# Philips-Ble-Robot-Code

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Cpp_Hal_ST-essentials.txt  LICENSE  README.md  binaryLedBackup.txt  kladblok.txt  todo
.devcontainer/: devcontainer.json
binary_calculator/services/: binaryCalculator.cpp  binaryCalculator.hpp
binary_calculator/services/test/: TestBinaryCalculator.cpp
ble_example/: CMakeLists.txt  Main.cpp
robot/: CMakeLists.txt  Main.cpp  PwmDriver.cpp  PwmDriver.hpp  PwmDriverImpl.cpp  PwmDriverImpl.hpp
robot_interfaces/: CMakeLists.txt  CarControl.hpp  MotorShieldControllerDc.hpp  PwmDriver.hpp  RobotServiceGattServer.hpp  ShiftRegisterDriver.hpp
robot_services/: BasicCarControl.cpp  BasicCarControl.hpp  BleUi.cpp  BleUi.hpp  CMakeLists.txt  CarControlToGattCharacteristic.cpp  CarControlToGattCharacteristic.hpp  MotorShieldControllerDc.cpp  MotorShieldControllerDc.hpp  MotorShieldControllerDcImpl.cpp  MotorShieldControllerDcImpl.hpp  PwmDriver.cpp  PwmDriver.hpp  RobotServiceDefinition.cpp  RobotServiceDefinition.hpp  ShiftRegisterDriver.cpp  ShiftRegisterDriver.hpp  ShiftRegisterDriverImpl.cpp  ShiftRegisterDriverImpl.hpp  TracingBasicCarControl.cpp  TracingBasicCarControl.hpp  robotObserver.hpp
robot_services/test/: CMakeLists.txt  TestBasicCarControl.cpp  TestBasicCarControll.cpp  TestBleUi.cpp  TestCarControlToGattCharacteristic.cpp  TestMotorShieldControllerDc.cpp  TestPwmDriver.cpp  TestShiftRegisterDriver.cpp
robot_services/test_doubles/: CarControlMock.hpp  MotorShieldControllerMock.hpp  PwmDriverMock.hpp  RobotServiceGattServerMock.hpp  ShiftRegisterDriverMock.hpp
